# example-model-images

./: .gitignore  README.md
ner-model/: Dockerfile  README.md  model.py
ner-model-grpc/: Dockerfile.ner-plain-grpc  ner_server_plain_grpc.py
ner-model-http/: Dockerfile.ner  ner_server.py
rf-classifier/: """Test the RF classifier end-to-end via  Dockerfile  Dockerfile.classifier  README.md  classifier_server.py  model.py
roberta-classifier/: .gcloudignore  Dockerfile  README.md  classifier.py  cloudbuild.yaml  deploy.py  model.py  pyproject.toml  register.py  test.py  train.py
